--- a/content/scss/index.scss
+++ b/content/scss/index.scss
@@ -173,8 +173,13 @@ header {
 	}
 
 	.side-nav-container {
+		position: absolute;
+
 		padding: 0;
 		height: 100vh;
+		width: 175px;
+
+		background-color: $menuBgColor;
 
 		.row-fluid {
 			margin-left: 0;
@@ -206,5 +211,10 @@ header {
 }
 
 main {
-	background-color: #2c3e50;
+	position: absolute;
+	top: 80px;
+	left: 175px;
+
+	background-color: transparent;
+	color: $white;
 }
