--- a/views/index.html
+++ b/views/index.html
@@ -26,6 +26,17 @@
 						</svg>
 					</div>
 				</div>
+				<ul class="nav navbar-nav">
+					<li class="hvr-underline-from-center">
+						<a href="#">Home</a>
+					</li>
+					<li class="hvr-underline-from-center">
+						<a href="#">Matches</a>
+					</li>
+					<li class="hvr-underline-from-center">
+						<a href="#/heroes">Heroes</a>
+					</li>
+				</ul>
 				<ul class="nav navbar-nav pull-right">
 					<li class="hvr-back-pulse">
 						<a href="#" popover="Account" popover-placement="bottom" popover-trigger="mouseenter" popover-append-to-body="true">
@@ -54,7 +65,7 @@
 					</li>
 				</ul>
 			</nav>
-			<div class="container-fluid side-nav-container">
+			<!-- <div class="container-fluid side-nav-container">
 				<div class="row row-fluid">
 					<div class="sidebar-nav">
 						<ul class="nav in">
@@ -70,7 +81,7 @@
 						</ul>
 					</div>
 				</div>
-			</div>
+			</div> -->
 		</header>
 		<main ui-view>
 			<!-- different page's content goes here -->
